# XDataPlayer

./: CMakeLists.txt  HPPackClient.cpp  HPPackClient.h  PlayerEngine.cpp  PlayerEngine.h  README.md  main.cpp
Config/: TickerList.yml  XDataPlayer.yml
